--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,12 +2,158 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="icon" href="{{asset('favicon.ico')}}" type="image/x-icon" />
+        <link rel="stylesheet" type="text/css" id="theme" href="{{asset('html/css/theme-default.css')}}"/>
+        <link rel="stylesheet" type="text/css" id="theme" href="{{asset('html/css/animate.css')}}"/>
+        <link rel="stylesheet" type="text/css" href="{{asset('html/css/style.css')}}"/>
+        <!-- START SCRIPTS -->
+          <!-- START PLUGINS -->
+          <title>Starter</title>
+          <script type="text/javascript" src="{{asset('html/js/plugins/jquery/jquery.min.js')}}"></script>
+          <script type="text/javascript" src="{{asset('html/js/plugins/jquery/jquery-ui.min.js')}}"></script>
+          <script type="text/javascript" src="{{asset('html/js/plugins/bootstrap/bootstrap.min.js')}}"></script>
+              <script type='text/javascript' src='{{ asset('html/js/plugins/bootstrap/bootstrap-datepicker.js')}}'></script>
+              <script type='text/javascript' src="{{asset('html/js/plugins/fileinput/bootstrap.file-input.js')}}"></script>
+          <!-- END PLUGINS -->
+          <!-- START THIS PAGE PLUGINS-->
+          <!-- <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places&key=AIzaSyCtzqgQy-FZLuG0dZdLEv0HsSM3hVwtjxY"></script> -->
+
+          <script type='text/javascript' src="{{asset('html/js/plugins/icheck/icheck.min.js')}}"></script>
+          <script type="text/javascript" src="{{asset('html/js/plugins/mcustomscrollbar/jquery.mCustomScrollbar.min.js')}}"></script>
+          <script type="text/javascript" src="{{asset('html/js/plugins/blueimp/jquery.blueimp-gallery.min.js')}}"></script>
+          <script type="text/javascript" src="{{asset('html/js/plugins/moment.min.js')}}"></script>
+          <script type="text/javascript" src="{{asset('html/js/plugins/bootstrap/bootstrap-select.js')}}"></script>
+          <!-- END THIS PAGE PLUGINS-->
+          <!-- START TEMPLATE -->
+          <script type="text/javascript" src="{{asset('html/js/plugins/codemirror/codemirror.js')}}"></script>
+       <script type='text/javascript' src="{{asset('html/js/plugins/codemirror/mode/htmlmixed/htmlmixed.js')}}"></script>
+
+       <script type='text/javascript' src="{{asset('html/js/plugins/codemirror/mode/javascript/javascript.js')}}"></script>
+       <script type='text/javascript' src="{{asset('html/js/plugins/codemirror/mode/css/css.js')}}"></script>
+       <script type='text/javascript' src="{{asset('html/js/plugins/codemirror/mode/clike/clike.js')}}"></script>
+       <script type='text/javascript' src="{{asset('html/js/plugins/codemirror/mode/php/php.js')}}"></script>
+        <script type='text/javascript' src="{{asset('html/js/plugins/codemirror/mode/xml/xml.js')}}"></script>
+            <script type="text/javascript" src="{{asset('html/js/plugins/summernote/summernote.js')}}"></script>
+            <script type="text/javascript" src="{{ asset('html/js/plugins/morris/raphael-min.js')}}"></script>
+            <script type="text/javascript" src="{{ asset('html/js/plugins/morris/morris.min.js')}}"></script>
+            <script type="text/javascript" src="{{ asset('html/js/plugins/rickshaw/d3.v3.js')}}"></script>
+            <script type="text/javascript" src="{{ asset('html/js/plugins/rickshaw/rickshaw.min.js')}}"></script>
+            <script type='text/javascript' src='{{ asset('html/js/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js')}}'></script>
+            <script type='text/javascript' src='{{ asset('html/js/plugins/jvectormap/jquery-jvectormap-world-mill-en.js')}}'></script>
+            <script type="text/javascript" src="{{ asset('html/js/plugins/nvd3/lib/d3.v3.js')}}"></script>
+            <script type="text/javascript" src="{{ asset('html/js/plugins/nvd3/nv.d3.min.js')}}"></script>
+          <script type="text/javascript" src="{{ asset('html/js/plugins/datatables/jquery.dataTables.min.js')}}"></script>
+          <script type="text/javascript" src="{{ asset('html/js/plugins/noty/jquery.noty.js')}}"></script>
+
+          <script type="text/javascript" src="{{asset('html/js/plugins.js')}}"></script>
+          <script type="text/javascript" src="{{asset('html/js/actions.js')}}"></script>
+            <script src="http://www.w3schools.com/lib/w3data.js"></script>
+            <script src="{{ asset('html/js/moment.js')}}"></script>
+            <script src="http://twitter.github.io/typeahead.js/releases/latest/typeahead.bundle.js"></script>
+          <!-- END TEMPLATE -->
+        <!-- END SCRIPTS -->
     </head>
     <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        <!-- START PAGE CONTAINER -->
+        <div class="page-container"  >
+            <!-- START PAGE SIDEBAR -->
+            <div class="page-sidebar">
+                <!-- START X-NAVIGATION -->
+                <ul class="x-navigation">
+                    <li class="xn-logo">
+                        <a align="center" href="#">Starter </a>
+                        <a href="#" class="x-navigation-control"></a>
+                    </li>
+                    <li class="xn-profile">
+                        <a href="#" class="profile-mini">
+                            <img src="{{asset('html/img/loginascustomer_profile.png')}}" alt="John Doe"/>
+                        </a>
+                        <div class="profile">
+                            <div class="profile-image">
+                                <img src="{{asset('html/img/loginascustomer_profile.jpg')}}" alt="John Doe"/>
+                            </div>
+                            <div class="profile-data">
+                                <div class="profile-data-name">{{app.user.username}}</div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="xn-openable {% if "profile" in  app.request.attributes.get('_route')  %}active{% endif %} ">
+                        <a href="#"><span class="fa fa-user"></span> <span class="xn-text">Profile</span></a>
+                        <ul>
+                            <li><a href="{{path('fos_user_profile_show')}}"><span class="fa fa-user"></span> Profile</a></li>
+                            <li><a href="{{path('fos_user_profile_edit')}}"><span class="fa fa-pencil"></span> Edit profile</a></li>
+                        </ul>
+                    </li>
+
+                </ul>
+                <!-- END X-NAVIGATION -->
+            </div>
+            <!-- END PAGE SIDEBAR -->
+            <!-- PAGE CONTENT -->
+            <div class="page-content">
+                <!-- START X-NAVIGATION VERTICAL -->
+                <ul class="x-navigation x-navigation-horizontal x-navigation-panel">
+                    <!-- TOGGLE NAVIGATION -->
+                    <li class="xn-icon-button">
+                        <a href="#" class="x-navigation-minimize"><span class="fa fa-dedent"></span></a>
+                    </li>
+                    <!-- END TOGGLE NAVIGATION -->
+                    <!-- SEARCH -->
+
+                    <!-- END SEARCH -->
+                    <!-- SIGN OUT -->
+                    <li class="xn-icon-button pull-right">
+                        <a href="#" class="mb-control" data-box="#mb-signout"><span class="fa fa-sign-out"></span></a>
+                    </li>
+                    <!-- END SIGN OUT -->
+                </ul>
+                <!-- END X-NAVIGATION VERTICAL -->
+                <!-- PAGE CONTENT WRAPPER -->
+                    {% block master_content %}
+                    {% endblock master_content %}
+
+
+                <!-- END PAGE CONTENT WRAPPER -->
+            </div>
+            <!-- END PAGE CONTENT -->
+        </div>
+        <!-- END PAGE CONTAINER -->
+        <!-- MESSAGE BOX-->
+        <div class="message-box animated fadeIn" data-sound="fail" id="mb-signout">
+            <div class="mb-container">
+                <div class="mb-middle">
+                    <div class="mb-title"><span class="fa fa-sign-out"></span> Log <strong>Out</strong> ?</div>
+                    <div class="mb-content">
+                        <p>Êtes vous sur de se déconnecter ?</p>
+                        <p>Cliquer sur Non pour annulez. </p>
+                    </div>
+                    <div class="mb-footer">
+                        <div class="pull-right">
+                            <a href="{{path('fos_user_security_logout')}}" class="btn btn-success btn-lg">Yes</a>
+                            <button class="btn btn-default btn-lg mb-control-close">No</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- END MESSAGE BOX-->
+
+        <!-- BLUEIMP GALLERY -->
+        <div id="blueimp-gallery" class="blueimp-gallery blueimp-gallery-controls">
+            <div class="slides"></div>
+            <h3 class="title"></h3>
+            <a class="prev">‹</a>
+            <a class="next">›</a>
+            <a class="close">×</a>
+            <a class="play-pause"></a>
+            <ol class="indicator"></ol>
+        </div>
+        <!-- END BLUEIMP GALLERY -->
+        <!-- START PRELOADS -->
+        <audio id="audio-alert" src="{{asset('html/audio/alert.mp3')}}" preload="auto"></audio>
+        <audio id="audio-fail" src="{{asset('html/audio/fail.mp3')}}" preload="auto"></audio>
+        <!-- END PRELOADS -->
+        <!-- START MODAL FOR OPERATION TYPE-->
     </body>
 </html>
